--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,12 +1,7 @@
 body {
   background-color: #f4f5f5;
 }
-.container {
-  position: relative;
-  margin: 0 auto;
-  width: 100%;
-  max-width: 960px;
-}
+
 .pt10 {
   padding-top: 10px;
 }
@@ -16,9 +11,30 @@ body {
 .pl20 {
   padding-left: 20px;
 }
+
 .mb20 {
   margin-bottom: 20px;
 }
+.card-p0 {
+  .ant-card-body {
+    padding: 0;
+  }
+}
+.card-p10 {
+  .ant-card-body {
+    padding: 10px;
+  }
+}
+.cp {
+  cursor: pointer;
+}
+.container {
+  position: relative;
+  margin: 0 auto;
+  width: 100%;
+  max-width: 960px;
+}
+// banner
 .index-banner {
   width: 600px;
   height: 333px;
