--- a/styles/global.scss
+++ b/styles/global.scss
@@ -61,7 +61,12 @@ a {
 .pl20 {
   padding-left: 20px;
 }
-
+.mb5 {
+  margin-bottom: 5px;
+}
+.mb10 {
+  margin-bottom: 10px;
+}
 .mb20 {
   margin-bottom: 20px;
 }
