--- a/styles/global.scss
+++ b/styles/global.scss
@@ -127,3 +127,93 @@ a {
     margin: 5px;
   }
 }
+//
+.componment-project-label {
+  .course-nav {
+    display: flex;
+    flex-flow: row wrap;
+    .course-nav-item {
+      padding: 10px;
+      cursor: pointer;
+    }
+    .on {
+      color: #1890ff;
+      font-weight: 700;
+      background: #1890ff30;
+      border-radius: 6px;
+    }
+  }
+}
+.componment-project-list {
+  padding: 20px 0;
+  .project {
+    margin-left: -10px;
+    margin-right: -10px;
+    .project-item {
+      padding: 0 10px 20px 10px;
+      .main {
+        background-color: #fff;
+        border-radius: 5px 5px 0 0;
+        overflow: hidden;
+        .envelope {
+          overflow: hidden;
+          height: 158px;
+          img {
+            display: block;
+            width: 100%;
+          }
+        }
+        .info {
+          border-bottom: 1px solid #eee;
+          padding: 11px 16px 13px;
+          height: 100px;
+          position: relative;
+          .info-title {
+            white-space: nowrap;
+            text-overflow: ellipsis;
+            overflow: hidden;
+            color: #333;
+          }
+          .info-tags {
+            font-size: 12px;
+            color: #bbb;
+            margin-bottom: 17px;
+            height: 18px;
+          }
+          .info-item {
+            display: flex;
+            font-size: 12px;
+            color: #bbb;
+          }
+        }
+        .user {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          padding: 0 16px;
+          height: 50px;
+          .resume {
+            display: flex;
+            .header {
+              border-radius: 50%;
+              margin-right: 10px;
+              width: 24px;
+              height: 24px;
+              border: none;
+              vertical-align: middle;
+              background-color: #f4f5f5;
+            }
+          }
+          .time {
+            font-size: 12px;
+            color: #bbb;
+          }
+        }
+      }
+    }
+  }
+}
+.componment-project-list-page {
+  display: flex;
+  justify-content: center;
+}
